# singularity

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
examples/: dx12_probe.rs  render_frame.rs  validate_shader.rs
shaderglass/: singularity.slang  singularity.slangp
src/: capture.rs  capture_macos.rs  capture_windows.rs  gpu_share.rs  main.rs  screenshot_fix.rs  singularity.wgsl
